--- a/Instagram/index.html
+++ b/Instagram/index.html
@@ -61,9 +61,7 @@
         </div>
       </section>
 
-      <section class="content-part">
-       
-      </section>
+      <section class="content-part"></section>
     </main>
 
     <div class="show-following-part js-show-following-part"></div>
